--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,17 +1,24 @@
 <ion-pane>
   <ion-content>
     <div class="list card">
+    	<div class="list list-inset">
+		  <label class="item item-input">
+		    <i class="icon ion-search placeholder-icon"></i>
+		    <input type="text" placeholder="Search">
+		  </label>
+		</div>
+		<div class="item">
+			<h1>{{home.city}}, {{home.state}}</h1>
+			<h1>{{home.temp}}°F</h1>
+			<img src="{{home.icon}}">
+			<p>
+				{{home.summary}}
+			</p>
+		</div>
 
-      <div class="item">
-        <h1>{{home.temp}}°F</h1>
-      </div>
+		<div class="item item-body">
 
-      <div class="item item-body">
-        <skycon icon="home.icon"> </skycon>
-        <p>
-          {{home.summary}}
-        </p>
-      </div>
+		</div>
 
     </div>
   </ion-content>
