--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,13 +1,16 @@
 <ion-pane>
   <ion-content>
     <div class="list card">
-    	<div class="list list-inset">
-		  <label class="item item-input">
-		    <i class="icon ion-search placeholder-icon"></i>
-		    <input type="text" placeholder="Search">
+    	<div class="item item-input-inset">
+		  <label class="item-input-wrapper">
+		    <i class="icon ion-ios-search placeholder-icon"></i>
+		    <input ng-model="home.search" type="search" placeholder="Search">
 		  </label>
+		  <button ng-click="home.doSearch()" class="button button-balanced">
+		    Search
+		  </button>
 		</div>
-		<div class="item">
+		<div class="item item-body">
 			<h1>{{home.city}}, {{home.state}}</h1>
 			<h1>{{home.temp}}°F</h1>
 			<img src="{{home.icon}}">
@@ -16,7 +19,7 @@
 			</p>
 		</div>
 
-		<div class="item item-body">
+		<div class="item">
 
 		</div>
 
