populating recent search list, able to click on from home view and research weather, not able to do it from searchHistory view

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,3 +1,7 @@
+<ion-header-bar class="bar-balanced">
+    <h1 class="title">My Weather App</h1>
+</ion-header-bar>
+
 <ion-pane>
   <ion-content>
     <div class="list card">
@@ -19,9 +23,12 @@
 			</p>
 		</div>
 
-		<div class="item">
-
-		</div>
+		<div class="list" ng-repeat="(key, value) in home.searchHistory">
+	        <a class="item" ng-click="home.doRecentSearch('{{value}}')" href="">{{key}}</a>
+	    </div>
+		<a class="item" href="#/searchHistory">
+    		Search History
+  		</a>
 
     </div>
   </ion-content>
